Add GitHub Updater URL to styles.css

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ Description:    Theme for the OurTown community art project
 Author:         SplitPixel
 Author URI:     
 Template:       twentytwelve
-Version:        1.3
+Version:        1.1
+GitHub Theme URI: https://github.com/warofthesun/ourtown
 */
 
 @import url("../twentytwelve/style.css");
