Change Theme Name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name:     OurTown
+Theme Name:     OurTown Nashville
 Theme URI:      
 Description:    Theme for the OurTown community art project
 Author:         SplitPixel
